test/invalid/baseline/union-any.txt
Syntax error at line 1 in union-any.widl:
typedef (any or DOMString or any)
             ^ Type `any` cannot be included in a union type
